Bug 1283032 - initialize members from RunnableMethod in constructor. r=billm

MozReview-Commit-ID: L6tAqI1ci1b